# NovelistBuddy

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/Client/: ChatGPTClient.cpp  ChatGPTClient.h
src/Utils/IO/: IOFileHelper.cpp  IOFileHelper.h
